@@ -1,3 +1,8 @@
+2005-06-21  Dennis Cranston <dennis_cranston@yahoo.com>
+
+	* gsearchtool.c: (add_file_to_search_results):  Fix
+	relative path. (Closes bug #308230)
+	
 2005-06-05  Dennis Cranston <dennis_cranston@yahoo.com>
 
 	* Makefile.am:  Add GREP_COMMAND.
